# spyglass

./: .env.example  .gitignore  README.md  alembic.ini  pyproject.toml  test-and-lint.sh
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 0001_logs_initial.py  0002_metrics_initial.py
install/: install.sh  projects_spyglass.service
src/: env.py  values.py.example
src/spyglass/: __init__.py  _config.py  cli.py  config.py
src/spyglass/client/: collector.py  http_client.py  initialize.py  logging.py  query.py
src/spyglass/dashboard/: aggregate.py  builder.py  config.py  schemas.py
src/spyglass/db/: models.py  store.py
src/spyglass/server/: app.py  dashboard_queries.py  retention.py  routes.py  site.py  util.py
src/spyglass/static/dashboard/: index.html
src/spyglass/static/dashboard/css/: components.css  dashboard.css  shared.css
src/spyglass/static/dashboard/js/: api.js  dashboard-lib.js  layout.js  main.js
src/spyglass/static/dashboard/js/components/: base.js  chart-helper.js  counter.js  histogram.js  registry.js  timeseries.js
src/spyglass/templates/dashboard/: _base.html  energy-monitor.html  index.html  trainspotter.html
tests/: conftest.py  test_collector.py  test_config.py  test_dashboard.py  test_dashboard_series_gaps.mjs  test_initialize.py  test_log_patterns.mjs  test_retention.py  test_server.py  test_site.py
