[project]
name = "spyglass"
version = "0.1.0"
description = "Lightweight observability: metrics and log collection with a local SQLite backend."
authors = [{name = "Mohit Nalavadi"}]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "typer>=0.9.0",
    "python-dotenv>=1.0.0",
    "flask>=3.0.0",
    "sqlalchemy>=2.0.0",
    "requests>=2.31.0",
    "schedule>=1.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "black",
    "ruff>=0.14.10",
    "isort>=7.0.0",
]

[tool.config]
data_dir = "data"
host = "0.0.0.0"
port = 5013
retention_days = 30

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/spyglass"]

[tool.hatch.build.targets.wheel.force-include]
"src/spyglass/static" = "spyglass/static"

[project.scripts]
spyglass-config = "spyglass.config:main"
spyglass = "spyglass.cli:main"

[tool.black]
line-length = 110
target-version = ['py312']
include = '\.pyi?$'

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true

[tool.isort]
force_single_line = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-s -v --cov=. --cov-report=term-missing"
pythonpath = ["."]

[tool.coverage.run]
omit = ["tests/*", "*/test_*.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

[tool.uv]
exclude-newer = "1 week"
